block choose us

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top"><span>Up</span>Qode</a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -74,7 +73,6 @@
                                 </ul>
                             </li>
                             <li><a href="#">NeIson Noa</a></li>
-
                         </ul>
                     </li>
                     <li>
@@ -90,7 +88,6 @@
                     </form>
                 </ul>
             </div>
-
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
@@ -137,14 +134,63 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
     </section>
 
-    <section id="about" class="about-section">
+    <section id="why_choose_us" class="about_choose_us">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>About Section</h1>
+            <div class="intro">
+                <h2><span class="black_phrase">Why </span> choose us</h2>
+                <p>Quisque fermentum, nisl mattis volutpat rhoncus, tellus est congue nibh, ut euismod quam nisi quis felis.
+                    Nullam at scelerisque tellus mattis volutpat rhoncus.</p>
+            </div>
+            <div class="choose_blocks">
+                <div class="block_1">
+                    <div class="block_img">
+                        <img src="img/heart.png" alt="img">
+                    </div>
+                    <div class="block_text">
+                        <h3>See more</h3>
+                        <div class="block_1_links">
+                            <img src="img/link.png" alt="img">
+                            <img src="img/search.png" alt="img">
+                        </div>
+                    </div>
+                </div>
+                <div class="block_2">
+                    <div class="block_img">
+                        <img src="img/chat.png" alt="img">
+                    </div>
+                    <div class="block_text">
+                        <h3>Your title</h3>
+                        <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis </p>
+                    </div>
+                </div>
+                <div class="block_3">
+                    <div class="block_img">
+                        <img src="img/computer.png" alt="img">
+                    </div>
+                    <div class="block_text">
+                        <h3>Your title</h3>
+                        <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis </p>
+                    </div>
+                </div>
+                <div class="block_4">
+                    <div class="block_img">
+                        <img src="img/star.png" alt="img">
+                    </div>
+                    <div class="block_text">
+                        <h3>Your title</h3>
+                        <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis </p>
+                    </div>
+                </div>
+                <div class="block_5">
+                    <div class="block_img">
+                        <img src="img/flag.png" alt="img">
+                    </div>
+                    <div class="block_text">
+                        <h3>Your title</h3>
+                        <p>Duis bibendum diam non erat facilaisis en ter tincidunt. Duis </p>
+                    </div>
                 </div>
             </div>
         </div>
