--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">About</a>
+                        <a class="page-scroll" href="#about_us">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -197,21 +197,61 @@
     </section>
 
     <section id="products" class="products-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>About Products</h1>
-                </div>
-            </div>
+        <div class="products_title">
+            <h2>Our <span>products</span></h2>
         </div>
     </section>
 
-    <section id="services" class="services-section">
+    <section id="about_us" class="about_us_section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Services Section</h1>
+            <div class="skills col-md-6 col-sm-12 col-xs-12">
+                <div class="intro">
+                    <h2>About <span class="black_phrase">us</span></h2>
+                    <p>Quisque fermentum, nisl mattis volutpat rhoncus, tellus est congue nibh, ut euismod quam nisi quis felis.
+                        Nullam at scelerisque tellus mattis volutpat rhoncus.</p>
+                    <p class="black_text">Nullam at scelerisque tellus. Nulla feugiat iaculis ante, non tincidunt ligula scelerisque a. Vestibulum accumsan tincidunt odio vel finibus. Phasellus vestibulum lobortis ligula ut volutpat. Maecenas vitae nibh vel purus mollis semper. Nullam tempus feugiat mi id semper. Pellentesque ac posuere augue, vitae mollis enim. Etiam et ullamcorper dolor, a hendrerit quam. </p>
                 </div>
+                <div class="technologies">
+                    <div class="percents">
+                        <div class="names clearfix">
+                            <span class="left">Photoshop</span>
+                            <span class="right">79%</span>
+                        </div>
+                        <div class="percent_img">
+                            <img src="img/79.png" alt="img">
+                        </div>
+                    </div>
+                    <div class="percents">
+                        <div class="names">
+                            <span class="left">Html/Css</span>
+                            <span class="right">90%</span>
+                        </div>
+                        <div class="percent_img">
+                            <img src="img/90.png" alt="img">
+                        </div>
+                    </div>
+                    <div class="percents">
+                        <div class="names">
+                            <span class="left">JavaScript</span>
+                            <span class="right">69%</span>
+                        </div>
+                        <div class="percent_img">
+                            <img src="img/69.png" alt="img">
+                        </div>
+                    </div>
+                    <div class="percents">
+                        <div class="names">
+                            <span class="left">WordPress</span>
+                            <span class="right">92%</span>
+                        </div>
+                        <div class="percent_img">
+                            <img src="img/92.png" alt="img">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="right_img col-md-6 col-sm-12 col-xs-12">
+                <img src="img/ipad-mockup.png" alt="img">
             </div>
         </div>
     </section>
