--- a/index.html
+++ b/index.html
@@ -197,8 +197,90 @@
     </section>
 
     <section id="products" class="products-section">
-        <div class="products_title">
-            <h2>Our <span>products</span></h2>
+        <div class="products__header">
+            <h2 class="products__section-name">Our <span class="products__section-name_yellow">products</span></h2>
+        </div>
+        <div class="products__container">
+            <div class="products__wrapper">
+                <div class="products__item">
+                    <div class="products__img-wrapper">
+                        <img class="products__img" src="img/our-products/hotdog.png" alt="hotdog">
+                    </div>
+                    <div class="products__element">
+                        <h3 class="products__title">title</h3>
+                        <h4 class="products__subheader">Best Product</h4>
+                        <p class="products__desc">
+                            Duis bibendum diam
+                            non erat facilaisis tincidunt.
+                        </p>
+                    </div>
+                </div>
+                <div class="products__item">
+                    <div class="products__img-wrapper">
+                        <img class="products__img" src="img/our-products/bed.png" alt="bed">
+                    </div>
+                    <div class="products__element">
+                        <h3 class="products__title">title</h3>
+                        <h4 class="products__subheader">Best Product</h4>
+                        <p class="products__desc">
+                            Duis bibendum diam
+                            non erat facilaisis tincidunt.
+                        </p>
+                    </div>
+                </div>
+                <div class="products__item">
+                    <div class="products__img-wrapper">
+                        <img class="products__img" src="img/our-products/lamp.png" alt="lamp">
+                    </div>
+                    <div class="products__element">
+                        <h3 class="products__title">title</h3>
+                        <h4 class="products__subheader">Best Product</h4>
+                        <p class="products__desc">
+                            Duis bibendum diam
+                            non erat facilaisis tincidunt.
+                        </p>
+                    </div>
+                </div>
+                <div class="products__item">
+                    <div class="products__img-wrapper">
+                        <img class="products__img" src="img/our-products/vehile.png" alt="vehile">
+                    </div>
+                    <div class="products__element">
+                        <h3 class="products__title">title</h3>
+                        <h4 class="products__subheader">Best Product</h4>
+                        <p class="products__desc">
+                            Duis bibendum diam
+                            non erat facilaisis tincidunt.
+                        </p>
+                    </div>
+                </div>
+                <div class="products__item">
+                    <div class="products__img-wrapper">
+                        <img class="products__img" src="img/our-products/head.png" alt="head">
+                    </div>
+                    <div class="products__element">
+                        <h3 class="products__title">title</h3>
+                        <h4 class="products__subheader">Best Product</h4>
+                        <p class="products__desc">
+                            Duis bibendum diam
+                            non erat facilaisis tincidunt.
+                        </p>
+                    </div>
+                </div>
+                <div class="products__item">
+                    <div class="products__img-wrapper">
+                        <img class="products__img" src="img/our-products/workplace.png" alt="workplace">
+                    </div>
+                    <div class="products__element">
+                        <h3 class="products__title">title</h3>
+                        <h4 class="products__subheader">Best Product</h4>
+                        <p class="products__desc">
+                            Duis bibendum diam
+                            non erat facilaisis tincidunt.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -222,7 +304,7 @@
                         </div>
                     </div>
                     <div class="percents">
-                        <div class="names">
+                        <div class="names clearfix">
                             <span class="left">Html/Css</span>
                             <span class="right">90%</span>
                         </div>
@@ -231,7 +313,7 @@
                         </div>
                     </div>
                     <div class="percents">
-                        <div class="names">
+                        <div class="names clearfix">
                             <span class="left">JavaScript</span>
                             <span class="right">69%</span>
                         </div>
@@ -240,7 +322,7 @@
                         </div>
                     </div>
                     <div class="percents">
-                        <div class="names">
+                        <div class="names clearfix">
                             <span class="left">WordPress</span>
                             <span class="right">92%</span>
                         </div>
@@ -258,10 +340,10 @@
 
     <section id="contact" class="contact-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Contact Section</h1>
-                </div>
+            <div class="intro">
+                <h2><span class="black_phrase">Get in</span> Touch</h2>
+                <p>Quisque fermentum, nisl mattis volutpat rhoncus, tellus est congue nibh, ut euismod quam nisi quis felis.
+                    Nullam at scelerisque tellus mattis volutpat rhoncus.</p>
             </div>
         </div>
     </section>
