--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <!-- Font Lato -->
     <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
-
+    <!-- Google Maps -->
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyARPzpYkMZBEvqcZlZrKXczhot_FDCh4ok"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -339,14 +340,53 @@
     </section>
 
     <section id="contact" class="contact-section">
-        <div class="container">
             <div class="intro">
                 <h2><span class="black_phrase">Get in</span> Touch</h2>
                 <p>Quisque fermentum, nisl mattis volutpat rhoncus, tellus est congue nibh, ut euismod quam nisi quis felis.
                     Nullam at scelerisque tellus mattis volutpat rhoncus.</p>
             </div>
+            <div id="googlemaps"></div>
+            <div id="contactform" class="clearfix">
+                <div class="fields clearfix">
+                    <div class="name_email">
+                        <input type="text" class="input_name" placeholder="Full Name">
+                        <input type="text" class="input_email" placeholder="E-mail Address">
+                    </div>
+                    <div class="area">
+                        <textarea name="" id="" cols="30" rows="10" class="message" placeholder="Message"></textarea>
+                    </div>
+                    <div class="post clearfix">
+                        <input type="checkbox" id="check"><span class="like">I like your company</span>
+                        <button class="send">Send</button>
+                    </div>
+                </div>
+                <div class="address clearfix">
+                    <div class="adr">
+                        <p>69/A, Some Street Name</p>
+                        <p>Your City, code 01234 </p>
+                        <p>Country Name</p>
+                    </div>
+                    <div class="phone">
+                        <p>+880 123 456 78 98</p>
+                        <p>+860 987 648 74 95</p>
+                    </div>
+                    <div class="mail">
+                        <p>company@mail.com</p>
+                        <p>sales@mail.com</p>
+                    </div>
+                </div>
+            </div>
+
+    </section>
+
+    <section class="footer">
+        <div class="wrapper">
+            
         </div>
     </section>
+
+
+    <script src="js/common.js"></script>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
@@ -357,6 +397,8 @@
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
+
+    <!-- Google maps -->
 
 </body>
 
