--- a/index.html
+++ b/index.html
@@ -381,7 +381,15 @@
 
     <section class="footer">
         <div class="wrapper">
-            
+            <p class="rights"> © Company. All Rights Reserved  2016</p>
+            <div class="social">
+                <ul>
+                    <li><a href="#"><img src="img/facebook_S.png" alt="img"></a></li>
+                    <li><a href="#"><img src="img/googleplus_S.png" alt="img"></a></li>
+                    <li><a href="#"><img src="img/twitter_S.png" alt="img"></a></li>
+                    <li><a href="#"><img src="img/dribbble_S.png" alt="img"></a></li>
+                </ul>
+            </div>
         </div>
     </section>
 
